@@ -14,6 +14,10 @@ import android.text.TextUtils;
 import androidx.annotation.Nullable;
 import androidx.annotation.VisibleForTesting;
 
+import org.jni_zero.CalledByNative;
+import org.jni_zero.JNINamespace;
+import org.jni_zero.NativeMethods;
+
 import org.chromium.base.ApplicationState;
 import org.chromium.base.ApplicationStatus;
 import org.chromium.base.Callback;
@@ -41,9 +45,6 @@ import org.chromium.content_public.browser.ContentFeatureList;
 import org.chromium.content_public.browser.ContentFeatureMap;
 import org.chromium.content_public.common.ContentFeatures;
 import org.chromium.content_public.common.ContentSwitches;
-import org.jni_zero.CalledByNative;
-import org.jni_zero.JNINamespace;
-import org.jni_zero.NativeMethods;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -62,8 +63,10 @@ public final class ChildProcessLauncherHelperImpl {
     private static final String TAG = "ChildProcLH";
 
     // Manifest values used to specify the service names.
-    private static final String NUM_SANDBOXED_SERVICES_KEY = "org.chromium.content.browser.NUM_SANDBOXED_SERVICES";
-    private static final String NUM_PRIVILEGED_SERVICES_KEY = "org.chromium.content.browser.NUM_PRIVILEGED_SERVICES";
+    private static final String NUM_SANDBOXED_SERVICES_KEY =
+            "org.chromium.content.browser.NUM_SANDBOXED_SERVICES";
+    private static final String NUM_PRIVILEGED_SERVICES_KEY =
+            "org.chromium.content.browser.NUM_PRIVILEGED_SERVICES";
 
     // When decrementing the refcount on bindings, delay the decrement by this amount of time in
     // case a new ref count is added in the mean time. This is a heuristic to avoid temporarily
@@ -76,7 +79,8 @@ public final class ChildProcessLauncherHelperImpl {
     // Delay after app is background before reducing process priority.
     private static final int REDUCE_PRIORITY_ON_BACKGROUND_DELAY_MS = 9 * 1000;
 
-    private static final Runnable sDelayedBackgroundTask = ChildProcessLauncherHelperImpl::onSentToBackgroundOnLauncherThreadAfterDelay;
+    private static final Runnable sDelayedBackgroundTask =
+            ChildProcessLauncherHelperImpl::onSentToBackgroundOnLauncherThreadAfterDelay;
 
     // Flag to check if ServiceGroupImportance should be enabled after native is initialized.
     private static boolean sCheckedServiceGroupImportance;
@@ -92,7 +96,8 @@ public final class ChildProcessLauncherHelperImpl {
     private static ChildProcessRanking sSandboxedChildConnectionRanking;
 
     // Map from PID to ChildProcessLauncherHelper.
-    private static final Map<Integer, ChildProcessLauncherHelperImpl> sLauncherByPid = new HashMap<>();
+    private static final Map<Integer, ChildProcessLauncherHelperImpl> sLauncherByPid =
+            new HashMap<>();
 
     // Allocator used for non-sandboxed services.
     private static ChildConnectionAllocator sPrivilegedChildConnectionAllocator;
@@ -132,7 +137,8 @@ public final class ChildProcessLauncherHelperImpl {
     private boolean mReportedException;
 
     // Enables early Java tracing in child process before native is initialized.
-    private static final String TRACE_EARLY_JAVA_IN_CHILD_SWITCH = "--" + EarlyTraceEvent.TRACE_EARLY_JAVA_IN_CHILD_SWITCH;
+    private static final String TRACE_EARLY_JAVA_IN_CHILD_SWITCH =
+            "--" + EarlyTraceEvent.TRACE_EARLY_JAVA_IN_CHILD_SWITCH;
 
     // The first known App Zygote PID. If the app zygote gets restarted, the new bundles from it
     // are not sent further for simplicity. Accessed only on LauncherThread.
@@ -143,96 +149,110 @@ public final class ChildProcessLauncherHelperImpl {
     // from different threads.
     private static volatile Bundle sZygoteBundle;
 
-    private final ChildProcessLauncher.Delegate mLauncherDelegate = new ChildProcessLauncher.Delegate() {
-        @Override
-        public ChildProcessConnection getBoundConnection(ChildConnectionAllocator connectionAllocator, ChildProcessConnection.ServiceCallback serviceCallback) {
-            if (!mCanUseWarmUpConnection) return null;
-            SpareChildConnection spareConnection = mSandboxed ? sSpareSandboxedConnection : sSparePrivilegedConntection;
-            if (spareConnection == null) return null;
-            return spareConnection.getConnection(connectionAllocator, serviceCallback);
-        }
-
-        @Override
-        public void onBeforeConnectionAllocated(Bundle bundle) {
-            populateServiceBundle(bundle);
-        }
-
-        @Override
-        public void onBeforeConnectionSetup(Bundle connectionBundle) {
-            // Populate the bundle passed to the service setup call with content specific
-            // parameters.
-            connectionBundle.putInt(ContentChildProcessConstants.EXTRA_CPU_COUNT, CpuFeatures.getCount());
-            connectionBundle.putLong(ContentChildProcessConstants.EXTRA_CPU_FEATURES, CpuFeatures.getMask());
-            if (sZygoteBundle != null) {
-                connectionBundle.putAll(sZygoteBundle);
-            } else {
-                LibraryLoader.getInstance().getMediator().putSharedRelrosToBundle(connectionBundle);
-            }
-        }
-
-        @Override
-        public void onConnectionEstablished(ChildProcessConnection connection) {
-            assert LauncherThread.runningOnLauncherThread();
-            int pid = connection.getPid();
-
-            if (pid > 0) {
-                sLauncherByPid.put(pid, ChildProcessLauncherHelperImpl.this);
-                if (mRanking != null) {
-                    mRanking.addConnection(connection, false /* visible */, 1 /* frameDepth */, false /* intersectsViewport */, ChildProcessImportance.MODERATE);
-                    if (mBindingManager != null) mBindingManager.rankingChanged();
+    private final ChildProcessLauncher.Delegate mLauncherDelegate =
+            new ChildProcessLauncher.Delegate() {
+                @Override
+                public ChildProcessConnection getBoundConnection(
+                        ChildConnectionAllocator connectionAllocator,
+                        ChildProcessConnection.ServiceCallback serviceCallback) {
+                    if (!mCanUseWarmUpConnection) return null;
+                    SpareChildConnection spareConnection =
+                            mSandboxed ? sSpareSandboxedConnection : sSparePrivilegedConntection;
+                    if (spareConnection == null) return null;
+                    return spareConnection.getConnection(connectionAllocator, serviceCallback);
                 }
-                if (mSandboxed) {
-                    ChildProcessConnectionMetrics.getInstance().addConnection(connection);
+
+                @Override
+                public void onBeforeConnectionAllocated(Bundle bundle) {
+                    populateServiceBundle(bundle);
                 }
-                if (mReducePriorityOnBackground && !ApplicationStatus.hasVisibleActivities()) {
-                    reducePriorityOnBackgroundOnLauncherThread();
+
+                @Override
+                public void onBeforeConnectionSetup(Bundle connectionBundle) {
+                    // Populate the bundle passed to the service setup call with content specific
+                    // parameters.
+                    connectionBundle.putInt(
+                            ContentChildProcessConstants.EXTRA_CPU_COUNT, CpuFeatures.getCount());
+                    connectionBundle.putLong(
+                            ContentChildProcessConstants.EXTRA_CPU_FEATURES, CpuFeatures.getMask());
+                    if (sZygoteBundle != null) {
+                        connectionBundle.putAll(sZygoteBundle);
+                    } else {
+                        LibraryLoader.getInstance().getMediator().putSharedRelrosToBundle(
+                                connectionBundle);
+                    }
                 }
-            }
 
-            // Tell native launch result (whether getPid is 0).
-            if (mNativeChildProcessLauncherHelper != 0) {
-                ChildProcessLauncherHelperImplJni.get().onChildProcessStarted(mNativeChildProcessLauncherHelper, connection.getPid());
-            }
-            mNativeChildProcessLauncherHelper = 0;
-        }
+                @Override
+                public void onConnectionEstablished(ChildProcessConnection connection) {
+                    assert LauncherThread.runningOnLauncherThread();
+                    int pid = connection.getPid();
 
-        @Override
-        public void onReceivedZygoteInfo(ChildProcessConnection connection, Bundle relroBundle) {
-            assert LauncherThread.runningOnLauncherThread();
-            distributeZygoteInfo(connection, relroBundle);
-        }
+                    if (pid > 0) {
+                        sLauncherByPid.put(pid, ChildProcessLauncherHelperImpl.this);
+                        if (mRanking != null) {
+                            mRanking.addConnection(connection, false /* visible */,
+                                    1 /* frameDepth */, false /* intersectsViewport */,
+                                    ChildProcessImportance.MODERATE);
+                            if (mBindingManager != null) mBindingManager.rankingChanged();
+                        }
+                        if (mSandboxed) {
+                            ChildProcessConnectionMetrics.getInstance().addConnection(connection);
+                        }
+                        if (mReducePriorityOnBackground
+                                && !ApplicationStatus.hasVisibleActivities()) {
+                            reducePriorityOnBackgroundOnLauncherThread();
+                        }
+                    }
 
-        @Override
-        public void onConnectionLost(ChildProcessConnection connection) {
-            assert LauncherThread.runningOnLauncherThread();
-            if (connection.getPid() == 0) return;
+                    // Tell native launch result (whether getPid is 0).
+                    if (mNativeChildProcessLauncherHelper != 0) {
+                        ChildProcessLauncherHelperImplJni.get().onChildProcessStarted(
+                                mNativeChildProcessLauncherHelper, connection.getPid());
+                    }
+                    mNativeChildProcessLauncherHelper = 0;
+                }
 
-            ChildProcessLauncherHelperImpl result = sLauncherByPid.remove(connection.getPid());
-            // Child process might die before onConnectionEstablished.
-            if (result == null) return;
+                @Override
+                public void onReceivedZygoteInfo(
+                        ChildProcessConnection connection, Bundle relroBundle) {
+                    assert LauncherThread.runningOnLauncherThread();
+                    distributeZygoteInfo(connection, relroBundle);
+                }
 
-            if (mBindingManager != null) mBindingManager.removeConnection(connection);
-            if (mRanking != null) {
-                mRanking.removeConnection(connection);
-                if (mBindingManager != null) mBindingManager.rankingChanged();
-            }
-            if (mSandboxed) {
-                ChildProcessConnectionMetrics.getInstance().removeConnection(connection);
-            }
-        }
-    };
+                @Override
+                public void onConnectionLost(ChildProcessConnection connection) {
+                    assert LauncherThread.runningOnLauncherThread();
+                    if (connection.getPid() == 0) return;
+
+                    ChildProcessLauncherHelperImpl result =
+                            sLauncherByPid.remove(connection.getPid());
+                    // Child process might die before onConnectionEstablished.
+                    if (result == null) return;
+
+                    if (mBindingManager != null) mBindingManager.removeConnection(connection);
+                    if (mRanking != null) {
+                        mRanking.removeConnection(connection);
+                        if (mBindingManager != null) mBindingManager.rankingChanged();
+                    }
+                    if (mSandboxed) {
+                        ChildProcessConnectionMetrics.getInstance().removeConnection(connection);
+                    }
+                }
+            };
 
     /**
      * Called for every new child connection. Receives a possibly null bundle inherited from the App
      * Zygote. Sends the bundle to existing processes that did not have usable bundles or sends
      * a previously memoized bundle to the new child.
      *
-     * @param connection   the connection to the new child
+     * @param connection the connection to the new child
      * @param zygoteBundle the bundle received from the child process, null means that either the
      *                     process did not inherit from the app zygote or the app zygote did not
      *                     produce a usable RELRO region.
      */
-    private static void distributeZygoteInfo(ChildProcessConnection connection, @Nullable Bundle zygoteBundle) {
+    private static void distributeZygoteInfo(
+            ChildProcessConnection connection, @Nullable Bundle zygoteBundle) {
         if (LibraryLoader.mainProcessIntendsToProvideRelroFd()) return;
 
         if (!connection.hasUsableZygoteInfo()) {
@@ -270,6 +290,7 @@ public final class ChildProcessLauncherHelperImpl {
     private static void onObtainedUsableZygoteBundle(ChildProcessConnection connection) {
         if (sZygotePid != connection.getZygotePid()) {
             Log.d(TAG, "Zygote restarted.");
+            return;
         }
         // TODO(pasko): To avoid accumulating open file descriptors close the received RELRO FD
         // if it cannot be used.
@@ -310,7 +331,8 @@ public final class ChildProcessLauncherHelperImpl {
     private boolean mDroppedStrongBingingDueToBackgrounding;
 
     @CalledByNative
-    private static FileDescriptorInfo makeFdInfo(int id, int fd, boolean autoClose, long offset, long size) {
+    private static FileDescriptorInfo makeFdInfo(
+            int id, int fd, boolean autoClose, long offset, long size) {
         assert LauncherThread.runningOnLauncherThread();
         ParcelFileDescriptor pFd;
         if (autoClose) {
@@ -328,9 +350,12 @@ public final class ChildProcessLauncherHelperImpl {
     }
 
     @CalledByNative
-    private static ChildProcessLauncherHelperImpl createAndStart(long nativePointer, String[] commandLine, FileDescriptorInfo[] filesToBeMapped, boolean canUseWarmUpConnection) {
+    private static ChildProcessLauncherHelperImpl createAndStart(long nativePointer,
+            String[] commandLine, FileDescriptorInfo[] filesToBeMapped,
+            boolean canUseWarmUpConnection) {
         assert LauncherThread.runningOnLauncherThread();
-        String processType = ContentSwitchUtils.getSwitchValue(commandLine, ContentSwitches.SWITCH_PROCESS_TYPE);
+        String processType =
+                ContentSwitchUtils.getSwitchValue(commandLine, ContentSwitches.SWITCH_PROCESS_TYPE);
 
         if (TraceEvent.enabled()) {
             commandLine = Arrays.copyOf(commandLine, commandLine.length + 1);
@@ -341,25 +366,32 @@ public final class ChildProcessLauncherHelperImpl {
         if (!ContentSwitches.SWITCH_RENDERER_PROCESS.equals(processType)) {
             if (ContentSwitches.SWITCH_GPU_PROCESS.equals(processType)) {
                 sandboxed = false;
-                reducePriorityOnBackground = ContentFeatureMap.isEnabled(ContentFeatures.REDUCE_GPU_PRIORITY_ON_BACKGROUND);
+                reducePriorityOnBackground = ContentFeatureMap.isEnabled(
+                        ContentFeatures.REDUCE_GPU_PRIORITY_ON_BACKGROUND);
             } else {
                 // We only support sandboxed utility processes now.
                 assert ContentSwitches.SWITCH_UTILITY_PROCESS.equals(processType);
 
-                if (ContentSwitches.NONE_SANDBOX_TYPE.equals(ContentSwitchUtils.getSwitchValue(commandLine, ContentSwitches.SWITCH_SERVICE_SANDBOX_TYPE))) {
+                if (ContentSwitches.NONE_SANDBOX_TYPE.equals(ContentSwitchUtils.getSwitchValue(
+                            commandLine, ContentSwitches.SWITCH_SERVICE_SANDBOX_TYPE))) {
                     sandboxed = false;
                 }
             }
         }
 
-        IBinder binderCallback = ContentSwitches.SWITCH_GPU_PROCESS.equals(processType) ? new GpuProcessCallback() : null;
+        IBinder binderCallback = ContentSwitches.SWITCH_GPU_PROCESS.equals(processType)
+                ? new GpuProcessCallback()
+                : null;
 
-        ChildProcessLauncherHelperImpl helper = new ChildProcessLauncherHelperImpl(nativePointer, commandLine, filesToBeMapped, sandboxed, reducePriorityOnBackground, canUseWarmUpConnection, binderCallback);
+        ChildProcessLauncherHelperImpl helper = new ChildProcessLauncherHelperImpl(nativePointer,
+                commandLine, filesToBeMapped, sandboxed, reducePriorityOnBackground,
+                canUseWarmUpConnection, binderCallback);
         helper.start();
 
         if (sandboxed && !sCheckedServiceGroupImportance) {
             sCheckedServiceGroupImportance = true;
-            if (sSandboxedChildConnectionRanking != null && ChildProcessLauncherHelperImplJni.get().serviceGroupImportanceEnabled()) {
+            if (sSandboxedChildConnectionRanking != null
+                    && ChildProcessLauncherHelperImplJni.get().serviceGroupImportanceEnabled()) {
                 sSandboxedChildConnectionRanking.enableServiceGroupImportance();
             }
         }
@@ -380,7 +412,8 @@ public final class ChildProcessLauncherHelperImpl {
     }
 
     private static void warmUpOnLauncherThread(Context context, boolean sandboxed) {
-        SpareChildConnection spareConnection = sandboxed ? sSpareSandboxedConnection : sSparePrivilegedConntection;
+        SpareChildConnection spareConnection =
+                sandboxed ? sSpareSandboxedConnection : sSparePrivilegedConntection;
         if (spareConnection != null && !spareConnection.isEmpty()) {
             return;
         }
@@ -390,7 +423,8 @@ public final class ChildProcessLauncherHelperImpl {
         if (sandboxed) {
             sSpareSandboxedConnection = new SpareChildConnection(context, allocator, serviceBundle);
         } else {
-            sSparePrivilegedConntection = new SpareChildConnection(context, allocator, serviceBundle);
+            sSparePrivilegedConntection =
+                    new SpareChildConnection(context, allocator, serviceBundle);
         }
     }
 
@@ -402,11 +436,14 @@ public final class ChildProcessLauncherHelperImpl {
         LauncherThread.post(new Runnable() {
             @Override
             public void run() {
-                ChildConnectionAllocator allocator = getConnectionAllocator(context, true /* sandboxed */);
+                ChildConnectionAllocator allocator =
+                        getConnectionAllocator(context, true /* sandboxed */);
                 if (ChildProcessConnection.supportVariableConnections()) {
-                    sBindingManager = new BindingManager(context, BindingManager.NO_MAX_SIZE, sSandboxedChildConnectionRanking);
+                    sBindingManager = new BindingManager(
+                            context, BindingManager.NO_MAX_SIZE, sSandboxedChildConnectionRanking);
                 } else {
-                    sBindingManager = new BindingManager(context, allocator.getNumberOfServices(), sSandboxedChildConnectionRanking);
+                    sBindingManager = new BindingManager(context, allocator.getNumberOfServices(),
+                            sSandboxedChildConnectionRanking);
                 }
                 ChildProcessConnectionMetrics.getInstance().setBindingManager(sBindingManager);
             }
@@ -416,7 +453,9 @@ public final class ChildProcessLauncherHelperImpl {
     private static void onSentToBackground() {
         assert ThreadUtils.runningOnUiThread();
         sApplicationInForegroundOnUiThread = false;
-        int delay = sSkipDelayForReducePriorityOnBackgroundForTesting ? 0 : REDUCE_PRIORITY_ON_BACKGROUND_DELAY_MS;
+        int delay = sSkipDelayForReducePriorityOnBackgroundForTesting
+                ? 0
+                : REDUCE_PRIORITY_ON_BACKGROUND_DELAY_MS;
         LauncherThread.postDelayed(sDelayedBackgroundTask, delay);
         LauncherThread.post(() -> {
             if (sBindingManager != null) sBindingManager.onSentToBackground();
@@ -464,7 +503,9 @@ public final class ChildProcessLauncherHelperImpl {
         });
     }
 
-    public static void setSandboxServicesSettingsForTesting(ChildConnectionAllocator.ConnectionFactory factory, int serviceCount, String serviceName) {
+    public static void setSandboxServicesSettingsForTesting(
+            ChildConnectionAllocator.ConnectionFactory factory, int serviceCount,
+            String serviceName) {
         sSandboxedServiceFactoryForTesting = factory;
         sSandboxedServicesCountForTesting = serviceCount;
         sSandboxedServicesNameForTesting = serviceName;
@@ -478,20 +519,31 @@ public final class ChildProcessLauncherHelperImpl {
     static ChildConnectionAllocator getConnectionAllocator(Context context, boolean sandboxed) {
         assert LauncherThread.runningOnLauncherThread();
         boolean bindToCaller = ChildProcessCreationParamsImpl.getBindToCallerCheck();
-        boolean bindAsExternalService = sandboxed && ChildProcessCreationParamsImpl.getIsSandboxedServiceExternal();
+        boolean bindAsExternalService =
+                sandboxed && ChildProcessCreationParamsImpl.getIsSandboxedServiceExternal();
 
         if (!sandboxed) {
             if (sPrivilegedChildConnectionAllocator == null) {
-                sPrivilegedChildConnectionAllocator = ChildConnectionAllocator.create(context, LauncherThread.getHandler(), null, ChildProcessCreationParamsImpl.getPackageNameForPrivilegedService(), ChildProcessCreationParamsImpl.getPrivilegedServicesName(), NUM_PRIVILEGED_SERVICES_KEY, bindToCaller, bindAsExternalService, true /* useStrongBinding */);
+                sPrivilegedChildConnectionAllocator =
+                        ChildConnectionAllocator.create(context, LauncherThread.getHandler(), null,
+                                ChildProcessCreationParamsImpl.getPackageNameForPrivilegedService(),
+                                ChildProcessCreationParamsImpl.getPrivilegedServicesName(),
+                                NUM_PRIVILEGED_SERVICES_KEY, bindToCaller, bindAsExternalService,
+                                true /* useStrongBinding */);
             }
             return sPrivilegedChildConnectionAllocator;
         }
 
         if (sSandboxedChildConnectionAllocator == null) {
-            final String packageName = ChildProcessCreationParamsImpl.getPackageNameForSandboxedService();
-            Log.d(TAG, "Create a new ChildConnectionAllocator with package name = %s," + " sandboxed = true", packageName);
+            final String packageName =
+                    ChildProcessCreationParamsImpl.getPackageNameForSandboxedService();
+            Log.d(TAG,
+                    "Create a new ChildConnectionAllocator with package name = %s,"
+                            + " sandboxed = true",
+                    packageName);
             Runnable freeSlotRunnable = () -> {
-                ChildProcessConnection lowestRank = sSandboxedChildConnectionRanking.getLowestRankedConnection();
+                ChildProcessConnection lowestRank =
+                        sSandboxedChildConnectionRanking.getLowestRankedConnection();
                 if (lowestRank != null) {
                     lowestRank.kill();
                 }
@@ -500,36 +552,57 @@ public final class ChildProcessLauncherHelperImpl {
             ChildConnectionAllocator connectionAllocator = null;
             if (sSandboxedServicesCountForTesting != -1) {
                 // Testing case where allocator settings are overriden.
-                String serviceName = !TextUtils.isEmpty(sSandboxedServicesNameForTesting) ? sSandboxedServicesNameForTesting : SandboxedProcessService.class.getName();
-                connectionAllocator = ChildConnectionAllocator.createFixedForTesting(freeSlotRunnable, packageName, serviceName, sSandboxedServicesCountForTesting, bindToCaller, bindAsExternalService, false /* useStrongBinding */);
+                String serviceName = !TextUtils.isEmpty(sSandboxedServicesNameForTesting)
+                        ? sSandboxedServicesNameForTesting
+                        : SandboxedProcessService.class.getName();
+                connectionAllocator =
+                        ChildConnectionAllocator.createFixedForTesting(freeSlotRunnable,
+                                packageName, serviceName, sSandboxedServicesCountForTesting,
+                                bindToCaller, bindAsExternalService, false /* useStrongBinding */);
             } else if (ChildProcessConnection.supportVariableConnections()) {
-                connectionAllocator = ChildConnectionAllocator.createVariableSize(context, LauncherThread.getHandler(), freeSlotRunnable, packageName, ChildProcessCreationParamsImpl.getSandboxedServicesName(), bindToCaller, bindAsExternalService, false /* useStrongBinding */);
+                connectionAllocator = ChildConnectionAllocator.createVariableSize(context,
+                        LauncherThread.getHandler(), freeSlotRunnable, packageName,
+                        ChildProcessCreationParamsImpl.getSandboxedServicesName(), bindToCaller,
+                        bindAsExternalService, false /* useStrongBinding */);
             } else {
-                connectionAllocator = ChildConnectionAllocator.create(context, LauncherThread.getHandler(), freeSlotRunnable, packageName, ChildProcessCreationParamsImpl.getSandboxedServicesName(), NUM_SANDBOXED_SERVICES_KEY, bindToCaller, bindAsExternalService, false /* useStrongBinding */);
+                connectionAllocator = ChildConnectionAllocator.create(context,
+                        LauncherThread.getHandler(), freeSlotRunnable, packageName,
+                        ChildProcessCreationParamsImpl.getSandboxedServicesName(),
+                        NUM_SANDBOXED_SERVICES_KEY, bindToCaller, bindAsExternalService,
+                        false /* useStrongBinding */);
             }
             if (sSandboxedServiceFactoryForTesting != null) {
-                connectionAllocator.setConnectionFactoryForTesting(sSandboxedServiceFactoryForTesting);
+                connectionAllocator.setConnectionFactoryForTesting(
+                        sSandboxedServiceFactoryForTesting);
             }
             sSandboxedChildConnectionAllocator = connectionAllocator;
             if (ChildProcessConnection.supportVariableConnections()) {
                 sSandboxedChildConnectionRanking = new ChildProcessRanking();
             } else {
-                sSandboxedChildConnectionRanking = new ChildProcessRanking(sSandboxedChildConnectionAllocator.getNumberOfServices());
+                sSandboxedChildConnectionRanking = new ChildProcessRanking(
+                        sSandboxedChildConnectionAllocator.getNumberOfServices());
             }
         }
         return sSandboxedChildConnectionAllocator;
     }
 
-    private ChildProcessLauncherHelperImpl(long nativePointer, String[] commandLine, FileDescriptorInfo[] filesToBeMapped, boolean sandboxed, boolean reducePriorityOnBackground, boolean canUseWarmUpConnection, IBinder binderCallback) {
+    private ChildProcessLauncherHelperImpl(long nativePointer, String[] commandLine,
+            FileDescriptorInfo[] filesToBeMapped, boolean sandboxed,
+            boolean reducePriorityOnBackground, boolean canUseWarmUpConnection,
+            IBinder binderCallback) {
         assert LauncherThread.runningOnLauncherThread();
 
         mNativeChildProcessLauncherHelper = nativePointer;
         mSandboxed = sandboxed;
         mReducePriorityOnBackground = reducePriorityOnBackground;
         mCanUseWarmUpConnection = canUseWarmUpConnection;
-        ChildConnectionAllocator connectionAllocator = getConnectionAllocator(ContextUtils.getApplicationContext(), sandboxed);
-        mLauncher = new ChildProcessLauncher(LauncherThread.getHandler(), mLauncherDelegate, commandLine, filesToBeMapped, connectionAllocator, binderCallback == null ? null : List.of(binderCallback));
-        mProcessType = ContentSwitchUtils.getSwitchValue(commandLine, ContentSwitches.SWITCH_PROCESS_TYPE);
+        ChildConnectionAllocator connectionAllocator =
+                getConnectionAllocator(ContextUtils.getApplicationContext(), sandboxed);
+        mLauncher = new ChildProcessLauncher(LauncherThread.getHandler(), mLauncherDelegate,
+                commandLine, filesToBeMapped, connectionAllocator,
+                binderCallback == null ? null : Arrays.asList(binderCallback));
+        mProcessType =
+                ContentSwitchUtils.getSwitchValue(commandLine, ContentSwitches.SWITCH_PROCESS_TYPE);
 
         if (sandboxed) {
             mRanking = sSandboxedChildConnectionRanking;
@@ -588,14 +661,19 @@ public final class ChildProcessLauncherHelperImpl {
         String exceptionString = connection.getExceptionDuringInit();
         if (exceptionString != null && !mReportedException) {
             mReportedException = true;
-            PostTask.postTask(TaskTraits.UI_BEST_EFFORT, () -> JavaExceptionReporter.reportStackTrace(exceptionString));
+            PostTask.postTask(TaskTraits.UI_BEST_EFFORT,
+                    () -> JavaExceptionReporter.reportStackTrace(exceptionString));
         }
-        ChildProcessLauncherHelperImplJni.get().setTerminationInfo(terminationInfoPtr, connection.bindingStateCurrentOrWhenDied(), connection.isKilledByUs(), connection.hasCleanExit(), exceptionString != null);
+        ChildProcessLauncherHelperImplJni.get().setTerminationInfo(terminationInfoPtr,
+                connection.bindingStateCurrentOrWhenDied(), connection.isKilledByUs(),
+                connection.hasCleanExit(), exceptionString != null);
         LauncherThread.post(() -> mLauncher.stop());
     }
 
     @CalledByNative
-    private void setPriority(int pid, boolean visible, boolean hasMediaStream, boolean hasForegroundServiceWorker, long frameDepth, boolean intersectsViewport, boolean boostForPendingViews, @ChildProcessImportance int importance) {
+    private void setPriority(int pid, boolean visible, boolean hasMediaStream,
+            boolean hasForegroundServiceWorker, long frameDepth, boolean intersectsViewport,
+            boolean boostForPendingViews, @ChildProcessImportance int importance) {
         assert LauncherThread.runningOnLauncherThread();
         assert mLauncher.getPid() == pid;
         if (getByPid(pid) == null) {
@@ -609,12 +687,17 @@ public final class ChildProcessLauncherHelperImpl {
             boostForPendingViews = false;
         }
 
-        boolean mediaRendererHasModerate = ContentFeatureMap.isEnabled(ContentFeatureList.BACKGROUND_MEDIA_RENDERER_HAS_MODERATE_BINDING);
+        boolean mediaRendererHasModerate = ContentFeatureMap.isEnabled(
+                ContentFeatureList.BACKGROUND_MEDIA_RENDERER_HAS_MODERATE_BINDING);
 
-        @ChildProcessImportance int newEffectiveImportance;
-        if ((visible && frameDepth == 0) || importance == ChildProcessImportance.IMPORTANT || (hasMediaStream && !mediaRendererHasModerate)) {
+        @ChildProcessImportance
+        int newEffectiveImportance;
+        if ((visible && frameDepth == 0) || importance == ChildProcessImportance.IMPORTANT
+                || (hasMediaStream && !mediaRendererHasModerate)) {
             newEffectiveImportance = ChildProcessImportance.IMPORTANT;
-        } else if ((visible && frameDepth > 0 && intersectsViewport) || boostForPendingViews || importance == ChildProcessImportance.MODERATE || (hasMediaStream && mediaRendererHasModerate) || hasForegroundServiceWorker) {
+        } else if ((visible && frameDepth > 0 && intersectsViewport) || boostForPendingViews
+                || importance == ChildProcessImportance.MODERATE
+                || (hasMediaStream && mediaRendererHasModerate) || hasForegroundServiceWorker) {
             newEffectiveImportance = ChildProcessImportance.MODERATE;
         } else {
             newEffectiveImportance = ChildProcessImportance.NORMAL;
@@ -643,11 +726,13 @@ public final class ChildProcessLauncherHelperImpl {
         }
 
         if (mRanking != null) {
-            mRanking.updateConnection(connection, visible, frameDepth, intersectsViewport, importance);
+            mRanking.updateConnection(
+                    connection, visible, frameDepth, intersectsViewport, importance);
             if (mBindingManager != null) mBindingManager.rankingChanged();
         }
 
-        if (mEffectiveImportance != newEffectiveImportance && mEffectiveImportance != ChildProcessImportance.NORMAL) {
+        if (mEffectiveImportance != newEffectiveImportance
+                && mEffectiveImportance != ChildProcessImportance.NORMAL) {
             final int existingEffectiveImportance = mEffectiveImportance;
             Runnable removeBindingRunnable = () -> {
                 switch (existingEffectiveImportance) {
@@ -700,7 +785,6 @@ public final class ChildProcessLauncherHelperImpl {
 
     /**
      * Dumps the stack of the child process with |pid|  without crashing it.
-     *
      * @param pid Process id of the child process.
      */
     @CalledByNative
@@ -715,7 +799,8 @@ public final class ChildProcessLauncherHelperImpl {
 
     private static Bundle populateServiceBundle(Bundle bundle) {
         ChildProcessCreationParamsImpl.addIntentExtras(bundle);
-        bundle.putBoolean(ChildProcessConstants.EXTRA_BIND_TO_CALLER, ChildProcessCreationParamsImpl.getBindToCallerCheck());
+        bundle.putBoolean(ChildProcessConstants.EXTRA_BIND_TO_CALLER,
+                ChildProcessCreationParamsImpl.getBindToCallerCheck());
         MultiProcessMediator m = LibraryLoader.getInstance().getMediator();
         m.ensureInitializedInMainProcess();
         m.putLoadAddressToBundle(bundle);
@@ -762,22 +847,29 @@ public final class ChildProcessLauncherHelperImpl {
         return sLauncherByPid;
     }
 
-    public static ChildProcessLauncherHelperImpl createAndStartForTesting(String[] commandLine, FileDescriptorInfo[] filesToBeMapped, boolean sandboxed, boolean reducePriorityOnBackground, boolean canUseWarmUpConnection, IBinder binderCallback, boolean doSetupConnection) {
-        ChildProcessLauncherHelperImpl launcherHelper = new ChildProcessLauncherHelperImpl(0L, commandLine, filesToBeMapped, sandboxed, reducePriorityOnBackground, canUseWarmUpConnection, binderCallback);
+    public static ChildProcessLauncherHelperImpl createAndStartForTesting(String[] commandLine,
+            FileDescriptorInfo[] filesToBeMapped, boolean sandboxed,
+            boolean reducePriorityOnBackground, boolean canUseWarmUpConnection,
+            IBinder binderCallback, boolean doSetupConnection) {
+        ChildProcessLauncherHelperImpl launcherHelper =
+                new ChildProcessLauncherHelperImpl(0L, commandLine, filesToBeMapped, sandboxed,
+                        reducePriorityOnBackground, canUseWarmUpConnection, binderCallback);
         launcherHelper.mLauncher.start(doSetupConnection, true /* queueIfNoFreeConnection */);
         return launcherHelper;
     }
 
-    /**
-     * @return the count of services set-up and working.
-     */
+    /** @return the count of services set-up and working. */
     static int getConnectedServicesCountForTesting() {
-        int count = sPrivilegedChildConnectionAllocator == null ? 0 : sPrivilegedChildConnectionAllocator.allocatedConnectionsCountForTesting();
+        int count = sPrivilegedChildConnectionAllocator == null
+                ? 0
+                : sPrivilegedChildConnectionAllocator.allocatedConnectionsCountForTesting();
         return count + getConnectedSandboxedServicesCountForTesting();
     }
 
     public static int getConnectedSandboxedServicesCountForTesting() {
-        return sSandboxedChildConnectionAllocator == null ? 0 : sSandboxedChildConnectionAllocator.allocatedConnectionsCountForTesting();
+        return sSandboxedChildConnectionAllocator == null
+                ? 0
+                : sSandboxedChildConnectionAllocator.allocatedConnectionsCountForTesting();
     }
 
     @VisibleForTesting
@@ -790,7 +882,8 @@ public final class ChildProcessLauncherHelperImpl {
     }
 
     public static ChildProcessConnection getWarmUpConnectionForTesting(boolean sandboxed) {
-        SpareChildConnection connection = sandboxed ? sSpareSandboxedConnection : sSparePrivilegedConntection;
+        SpareChildConnection connection =
+                sandboxed ? sSpareSandboxedConnection : sSparePrivilegedConntection;
         return connection == null ? null : connection.getConnection();
     }
 
@@ -799,7 +892,8 @@ public final class ChildProcessLauncherHelperImpl {
         // Can be called on a number of threads, including launcher, and binder.
         void onChildProcessStarted(long nativeChildProcessLauncherHelper, int pid);
 
-        void setTerminationInfo(long termiantionInfoPtr, @ChildBindingState int bindingState, boolean killedByUs, boolean cleanExit, boolean exceptionDuringInit);
+        void setTerminationInfo(long termiantionInfoPtr, @ChildBindingState int bindingState,
+                boolean killedByUs, boolean cleanExit, boolean exceptionDuringInit);
 
         boolean serviceGroupImportanceEnabled();
     }
